5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1644_2711.log
== TEST (2019-04-13 09:01:20) 
-- CODE:
#Entradas
V=int(input("Insira o valor disponivel:"))
#Entrada do RU
t=int(input("Insira a quantidade desejada:"))
Vt=float(input("Insira o valor dos tickets:"))
#Entradas do passe 
Qp=int(input("Insira a quantidade de passes desejado:"))
Vp=float(input("Insira o valor dos passes"))

if(V< (Vt*t) + (Qp*Vp)):
	msg= suficiente
else:
	msg= insuficiente

print(msg.upper())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    msg= insuficiente
NameError: name 'insuficiente' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:01:57) 
-- CODE:
#Entradas
V=int(input("Insira o valor disponivel:"))
#Entrada do RU
t=int(input("Insira a quantidade desejada:"))
Vt=float(input("Insira o valor dos tickets:"))
#Entradas do passe 
Qp=int(input("Insira a quantidade de passes desejado:"))
Vp=float(input("Insira o valor dos passes"))

if(V< (Vt*t) + (Qp*Vp)):
	msg= "suficiente"
else:
	msg= "insuficiente"

print(msg.upper())
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 09:02:26) 
-- CODE:
#Entradas
V=int(input("Insira o valor disponivel:"))
#Entrada do RU
t=int(input("Insira a quantidade desejada:"))
Vt=float(input("Insira o valor dos tickets:"))
#Entradas do passe 
Qp=int(input("Insira a quantidade de passes desejado:"))
Vp=float(input("Insira o valor dos passes"))

if(V< (Vt*t) + (Qp*Vp)):
	msg= "suficiente"
else:
	msg= "insuficiente"

print(msg.upper())
-- EXECUTION TIME:
0.111953
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:02:32) 
-- CODE:
#Entradas
V=int(input("Insira o valor disponivel:"))
#Entrada do RU
t=int(input("Insira a quantidade desejada:"))
Vt=float(input("Insira o valor dos tickets:"))
#Entradas do passe 
Qp=int(input("Insira a quantidade de passes desejado:"))
Vp=float(input("Insira o valor dos passes"))

if(V< (Vt*t) + (Qp*Vp)):
	msg= "suficiente"
else:
	msg= "insuficiente"

print(msg.upper())
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 09:03:03) 
-- CODE:
#Entradas
V=int(input("Insira o valor disponivel:"))
#Entrada do RU
t=int(input("Insira a quantidade desejada:"))
Vt=float(input("Insira o valor dos tickets:"))
#Entradas do passe 
Qp=int(input("Insira a quantidade de passes desejado:"))
Vp=float(input("Insira o valor dos passes"))

if(V< (Vt*t) + (Qp*Vp)):
	msg= "suficiente"
else:
	msg= "insuficiente"

print(msg.upper())
-- EXECUTION TIME:
0.200804
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
INSUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
SUFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:03:09) 
-- CODE:
#Entradas
V=int(input("Insira o valor disponivel:"))
#Entrada do RU
t=int(input("Insira a quantidade desejada:"))
Vt=float(input("Insira o valor dos tickets:"))
#Entradas do passe 
Qp=int(input("Insira a quantidade de passes desejado:"))
Vp=float(input("Insira o valor dos passes"))

if(V< (Vt*t) + (Qp*Vp)):
	msg= "suficiente"
else:
	msg= "insuficiente"

print(msg.upper())
-- OUTPUT:
INSUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 09:05:08) 
-- CODE:
#Entradas
V=int(input("Insira o valor disponivel:"))
#Entrada do RU
t=int(input("Insira a quantidade desejada:"))
Vt=float(input("Insira o valor dos tickets:"))
#Entradas do passe 
Qp=int(input("Insira a quantidade de passes desejado:"))
Vp=float(input("Insira o valor dos passes"))

if(Vt*t + Qp*Vp < V):
	msg= "suficiente"
else:
	msg= "insuficiente"

print(msg.upper())
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 09:05:31) 
-- CODE:
#Entradas
V=int(input("Insira o valor disponivel:"))
#Entrada do RU
t=int(input("Insira a quantidade desejada:"))
Vt=float(input("Insira o valor dos tickets:"))
#Entradas do passe 
Qp=int(input("Insira a quantidade de passes desejado:"))
Vp=float(input("Insira o valor dos passes"))

if(Vt*t + Qp*Vp < V):
	msg= "suficiente"
else:
	msg= "insuficiente"

print(msg.upper())
-- EXECUTION TIME:
0.221076
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
